moved css to file and trying to fix squashed graphs

--- a/demos/differential-privacy/style.css
+++ b/demos/differential-privacy/style.css
@@ -64,6 +64,12 @@ body {
 }
 
 canvas {
-  width: 400;
-  height: 400;
+  width: 300;
+  height: 300;
+}
+
+.graphCanvas {
+  display:block;
+  width:300px;
+  height:300px;
 }
